--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,16 @@
 {
+    "name": "sasakocic/flexy",
+    "description": "Symfony 4 Flexy skeleton",
     "type": "project",
-    "license": "proprietary",
+    "license": "MIT",
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "guzzlehttp/guzzle": "^7.0",
         "sensio/framework-extra-bundle": "^6.1",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
@@ -16,6 +20,28 @@
         "symfony/yaml": "5.2.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0"
+    },
+    "require-dev": {
+      "symfony/stopwatch": "^5.2",
+      "symfony/web-profiler-bundle": "^5.2",
+      "phpunit/php-code-coverage": "^9.2",
+      "squizlabs/php_codesniffer": "^3.5",
+      "codeclimate/php-test-reporter": "^0.4.4",
+      "sensiolabs/security-checker": "^6.0",
+      "pdepend/pdepend": "^2.8",
+      "phpunit/phpunit": "^9.5",
+      "php-http/curl-client": "^2.2",
+      "codeception/codeception": "^4.1",
+      "codeception/module-phpbrowser": "^1.0.0",
+      "codeception/module-asserts": "^1.0.0"
+    },
+    "scripts": {
+      "tests": "vendor/bin/codecept run --no-interaction",
+      "clean": "vendor/bin/codecept clean",
+      "failed": "vendor/bin/codecept run -g failed",
+      "check": "vendor/bin/phpcs --standard=PSR12 -s  --colors src",
+      "fix": "vendor/bin/phpcbf --standard=PSR12 src",
+      "coverage": "vendor/bin/codecept run --coverage --coverage-xml --coverage-html --no-interaction --coverage-phpunit"
     },
     "config": {
         "optimize-autoloader": true,
@@ -49,7 +75,13 @@
         ],
         "post-update-cmd": [
             "@auto-scripts"
-        ]
+        ],
+        "tests": "vendor/bin/codecept run --no-interaction",
+        "clean": "vendor/bin/codecept clean",
+        "failed": "vendor/bin/codecept run -g failed",
+        "check": "vendor/bin/phpcs --standard=PSR12 -s  --colors src",
+        "fix": "vendor/bin/phpcbf --standard=PSR12 src",
+        "coverage": "vendor/bin/codecept run --coverage --coverage-xml --coverage-html --no-interaction --coverage-phpunit"
     },
     "conflict": {
         "symfony/symfony": "*"
@@ -61,7 +93,5 @@
         }
     },
     "require-dev": {
-        "symfony/stopwatch": "^5.2",
-        "symfony/web-profiler-bundle": "^5.2"
     }
 }
