--- a/composer.json
+++ b/composer.json
@@ -22,26 +22,17 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
-      "symfony/stopwatch": "^5.2",
-      "symfony/web-profiler-bundle": "^5.2",
-      "phpunit/php-code-coverage": "^9.2",
-      "squizlabs/php_codesniffer": "^3.5",
-      "codeclimate/php-test-reporter": "^0.4.4",
-      "sensiolabs/security-checker": "^6.0",
-      "pdepend/pdepend": "^2.8",
-      "phpunit/phpunit": "^9.5",
-      "php-http/curl-client": "^2.2",
-      "codeception/codeception": "^4.1",
-      "codeception/module-phpbrowser": "^1.0.0",
-      "codeception/module-asserts": "^1.0.0"
-    },
-    "scripts": {
-      "tests": "vendor/bin/codecept run --no-interaction",
-      "clean": "vendor/bin/codecept clean",
-      "failed": "vendor/bin/codecept run -g failed",
-      "check": "vendor/bin/phpcs --standard=PSR12 -s  --colors src",
-      "fix": "vendor/bin/phpcbf --standard=PSR12 src",
-      "coverage": "vendor/bin/codecept run --coverage --coverage-xml --coverage-html --no-interaction --coverage-phpunit"
+        "symfony/stopwatch": "^5.2",
+        "symfony/web-profiler-bundle": "^5.2",
+        "phpunit/php-code-coverage": "^9.2",
+        "squizlabs/php_codesniffer": "^3.5",
+        "sensiolabs/security-checker": "^6.0",
+        "pdepend/pdepend": "^2.8",
+        "phpunit/phpunit": "^9.5",
+        "php-http/curl-client": "^2.2",
+        "codeception/codeception": "^4.1",
+        "codeception/module-phpbrowser": "^1.0.0",
+        "codeception/module-asserts": "^1.0.0"
     },
     "config": {
         "optimize-autoloader": true,
@@ -68,13 +59,13 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
         ],
         "post-update-cmd": [
-            "@auto-scripts"
         ],
         "tests": "vendor/bin/codecept run --no-interaction",
         "clean": "vendor/bin/codecept clean",
@@ -91,7 +82,5 @@
             "allow-contrib": false,
             "require": "5.2.*"
         }
-    },
-    "require-dev": {
     }
 }
