--- a/composer.json
+++ b/composer.json
@@ -22,17 +22,18 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
-        "symfony/stopwatch": "^5.2",
-        "symfony/web-profiler-bundle": "^5.2",
-        "phpunit/php-code-coverage": "^9.2",
-        "squizlabs/php_codesniffer": "^3.5",
-        "sensiolabs/security-checker": "^6.0",
-        "pdepend/pdepend": "^2.8",
-        "phpunit/phpunit": "^9.5",
-        "php-http/curl-client": "^2.2",
         "codeception/codeception": "^4.1",
+        "codeception/module-asserts": "^1.0.0",
         "codeception/module-phpbrowser": "^1.0.0",
-        "codeception/module-asserts": "^1.0.0"
+        "codeception/module-symfony": "^2.0",
+        "pdepend/pdepend": "^2.8",
+        "php-http/curl-client": "^2.2",
+        "phpunit/php-code-coverage": "^9.2",
+        "phpunit/phpunit": "^9.5",
+        "sensiolabs/security-checker": "^6.0",
+        "squizlabs/php_codesniffer": "^3.5",
+        "symfony/stopwatch": "^5.2",
+        "symfony/web-profiler-bundle": "^5.2"
     },
     "config": {
         "optimize-autoloader": true,
@@ -67,6 +68,7 @@
         ],
         "post-update-cmd": [
         ],
+        "live": "vendor/bin/phpunit tests/live",
         "tests": "vendor/bin/codecept run --no-interaction",
         "clean": "vendor/bin/codecept clean",
         "failed": "vendor/bin/codecept run -g failed",
